--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-						           and uncomment the following Encore helpers to start using Symfony UX #}
+																										           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -17,8 +17,41 @@
 		{% endblock %}
 	</head>
 	<body>
-		<div class="container"> 
+		<div class="container">
+			<header class="d-flex justify-content-between bg-light">
+				<h1>
+					<a class="nav-link active text-warning" href="{{ path('app_home')}}">Blog</a>
+				</h1>
+				<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					<div class="container-fluid">
+						<div class="collapse navbar-collapse" id="navbarNav">
+							<ul class="navbar-nav">
+								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="#">Categories</a>
+								</li>
+								{% if app.user %}
+									<li class="nav-item">
+										<a class="nav-link active" href="#">Account</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link active" href="{{ path('app_logout') }}">Logout</a>
+									</li>
+								{% else %}
+									<li class="nav-item">
+										<a class="nav-link active" href="{{ path('app_register') }}">Sign Up</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link active" href="{{ path('app_login') }}">Sign In</a>
+									</li>
+								{% endif %}
+
+
+							</ul>
+						</div>
+					</div>
+				</nav>
+			</header>
 			{% block body %}{% endblock %}
-			</div>
-		</body>
-	</html>
+		</div>
+	</body>
+</html>
