--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,11 +4,18 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="text-center">Bienvenue a la page d'acceuil</h1>
+
+
+	{% if categoryNumber != null %}
+		<h1 class="text-center">Article concernant
+			{{ category.name}}</h1>
+	{% else %}
+		<h1 class="text-center">Bienvenue a la page d'acceuil</h1>
+	{% endif %}
 	<div class="container">
 		<div class="row">
 			<div class="col-10">
-				{% for row in posts|batch(3) %}
+				{% for row in pagination|batch(3) %}
 					<div class="row">
 						{% for post in row %}
 
@@ -31,7 +38,11 @@
 				<h2>Categories</h2>
 				<div class="list-group">
 					{% for category in categories %}
-						<a href="{{ '' }}" class="list-group-item list-group-item-action">{{ category.name }}</a>
+						<a href="{{ path('app_category',{ id: category.id}) }}" class="list-group-item list-group-item-action
+																																																																																																	 {{
+																																																																																																																 (  (category.id == categoryNumber) ) ? 'active' : ''
+																																																																																																															}}
+																																																																																																															 ">{{ category.name }}</a>
 					{% endfor %}
 
 				</div>
@@ -39,4 +50,17 @@
 
 		</div>
 	</div>
+	<nav aria-label="Page navigation example">
+		<ul class="pagination  justify-content-center">
+			{% for item in range(1,totalPage) %}
+				<li class="page-item">
+					{% if (pageCurrent > 0) and (item == pageCurrent)   %}
+						<a class="page-link bg-primary text-white" href="{{ path('app_home',{page:item}) }}">{{ item}}</a>
+					{% else %}
+						<a class="page-link" tabindex="-1" aria-disabled="true" href="{{ path('app_home',{page:item}) }}">{{ item}}</a>
+					{% endif %}
+				</li>
+			{% endfor %}
+		</ul>
+	</nav>
 {% endblock %}
