--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -4,9 +4,9 @@
 {% endblock %}
 {% block body %}
 	<main class="my-4">
-		<h1 class="text-left">{{ post.title}}</h1>
-		<img class="img-fluid" src="{{ ( post.imageName != null) ? vich_uploader_asset(post) | imagine_filter('medium_thumb') : asset('/images/default/pexels-eberhard-grossgasteiger-844297.jpg') | imagine_filter('medium_thumb') }}" alt="{{ post.title }}"/>
-		<p class="mt-2">{{ post.description|raw }}</p>
+		<h1 class="text-left my-2">{{ post.title}}</h1>
+			<img class="img-fluid my-3" src="{{ ( post.imageName != null) ? vich_uploader_asset(post) | imagine_filter('medium_thumb') : asset('/images/default/pexels-eberhard-grossgasteiger-844297.jpg') | imagine_filter('medium_thumb') }}" alt="{{ post.title }}"/>
+		<p class="mt-2 ">{{ post.description|raw }}</p>
 		<p>{{post.content|raw }}
 		</p>
 	</main>
