--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,25 +4,44 @@
 {% endblock %}
 
 {% block body %}
-	{% for flashError in app.flashes('verify_email_error') %}
-		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
-	{% endfor %}
 
-	<h1>Register</h1>
+	<div class="row">
+		<div class="col-md-6 mx-auto">
+			<h1 class="my-5 text-center">Create an account</h1>
 
-	{{ form_start(registrationForm) }}
-	{{ form_row(registrationForm.fisrtName, {
-        label: 'Nom : '
-    }) }}
-	{{ form_row(registrationForm.lastName, {
-        label: 'Florian : '
-    }) }}
-	{{ form_row(registrationForm.email) }}
-	{{ form_row(registrationForm.plainPassword, {
-            label: 'Mots de passe : '
-        }) }}
-	{{ form_row(registrationForm.agreeTerms) }}
+			{{ form_start(registrationForm) }}
+			<div class="row">
+				<div class="col-md-6">
+					{{ form_row(registrationForm.fisrtName) }}
+				</div>
 
-	<button type="submit" class="btn">Register</button>
-	{{ form_end(registrationForm) }}
+				<div class="col-md-6">
+					{{ form_row(registrationForm.lastName) }}
+				</div>
+			</div>
+			<p>
+				{{ form_row(registrationForm.email) }}
+			</p>
+			<p>
+				{{ form_row(registrationForm.plainPassword, {
+                    label: 'Password'
+                }) }}
+			</p>
+
+			<p>
+				{{ form_row(registrationForm.agreeTerms) }}
+			</p>
+
+			<button type="submit" class="btn btn-primary btn-lg btn-block" formnovalidate>
+				Register
+			</button>
+
+			<p class="mt-5 mb-3 text-center text-muted">
+				Already have an account?
+				<a href="{{ path('app_login') }}">Log in</a>
+			</p>
+			{{ form_end(registrationForm) }}
+		</div>
+	</div>
+
 {% endblock %}
