--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,22 +1,24 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Reset your password{% endblock %}
-
 {% block body %}
-    {% for flashError in app.flashes('reset_password_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
-    <h1>Reset your password</h1>
-
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
-        <div>
-            <small>
-                Enter your email address and we we will send you a
-                link to reset your password.
-            </small>
-        </div>
-
-        <button class="btn btn-primary">Send password reset email</button>
-    {{ form_end(requestForm) }}
+	<div class="row">
+		<div class="col-md-6 mx-auto">
+			<h1 class="mt-5 mb-3 ">Reset your password</h1>
+			{% for flashError in app.flashes('reset_password_error') %}
+				<div class="alert alert-error bg-danger text-white rounded" role="alert">{{ flashError }}</div>
+			{% endfor %}
+			<p class="mb-3  text-muted">
+				Enter your email address and we we will send you a
+				link to reset your password.
+			</p>
+			<p>
+				{{ form_start(requestForm) }}
+				{{ form_row(requestForm.email) }}
+			</p>
+			<button type="submit" class="btn btn-primary  btn-block">
+				Send password reset email
+			</button>
+			{{ form_end(requestForm) }}
+		</div>
+	</div>
 {% endblock %}
