--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,42 +1,55 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Log in!
+{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<div class="row">
+		<div class="col-md-6 mx-auto">
+			<h1 class="mt-5 mb-3 text-center">Please sign in</h1>
+			<p class="mb-5 text-center text-muted">Your articles are waiting for you.</p>
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+			<form method="post">
+				{% if error %}
+					<div class="alert alert-error rounded mb-3" role="alert">
+						{{ error.messageKey|trans(error.messageData, 'security') }}
+					</div>
+				{% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
+				<div class="form-group my-3" >
+					<label for="email">Email</label>
+					<input type="email" value="{{ last_username }}" name="email" id="email" class="form-control" required autofocus>
+				</div>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+				<div class="form-group my-3">
+					<label for="password">Password</label>
+					<input type="password" name="password" id="password" class="form-control" required>
+				</div>
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+				<div class="d-flex justify-content-between my-3">
+					<div class="form-group">
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" name="_remember_me" id="remember_me">
+							<label class="form-check-label" for="remember_me">
+								Remember me
+							</label>
+						</div>
+					</div>
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
+					<a href="{{ path('app_forgot_password_request') }}">Forgot password?</a>
+				</div>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+				<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+				<button class="btn btn-lg btn-block btn-primary" type="submit">
+					Sign in
+				</button>
+
+				<p class="mt-5 mb-3 text-center text-muted">
+					Not registered yet?
+					<a href="{{ path('app_register') }}">Create an account</a>
+				</p>
+			</form>
+		</div>
+	</div>
 {% endblock %}
