--- a/templates/admin/post/_form.html.twig
+++ b/templates/admin/post/_form.html.twig
@@ -13,7 +13,7 @@
 			{{ form_row(form.description) }}
 		</p>
 		<p>
-			{{ form_row(form.imageName) }}
+			{{ form_row(form.imageFile) }}
 		</p>
 		<p>
 			{{ form_row(form.content) }}
