--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,1 +1,14 @@
 @import "~bootstrap/scss/bootstrap";
+
+.alert{
+    color: white;
+}
+.alert-error{
+    background-color: red;
+}
+.alert-info{
+    background-color: blue;
+}
+.alert-success{
+    background-color:rgb(0, 80, 0);
+}
