--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,8 +4,6 @@
 {% endblock %}
 
 {% block body %}
-
-
 	{% if categoryNumber != null %}
 		<h1 class="text-center">Article concernant
 			{{ category.name}}</h1>
@@ -39,10 +37,10 @@
 				<div class="list-group">
 					{% for category in categories %}
 						<a href="{{ path('app_category',{ id: category.id}) }}" class="list-group-item list-group-item-action
-																																																																																																	 {{
-																																																																																																																 (  (category.id == categoryNumber) ) ? 'active' : ''
-																																																																																																															}}
-																																																																																																															 ">{{ category.name }}</a>
+																																																																																																																																																																														 {{
+																																																																																																																																																																																													 (  (category.id == categoryNumber) ) ? 'active' : ''
+																																																																																																																																																																																												}}
+																																																																																																																																																																																												 ">{{ category.name }}</a>
 					{% endfor %}
 
 				</div>
@@ -50,17 +48,23 @@
 
 		</div>
 	</div>
-	<nav aria-label="Page navigation example">
-		<ul class="pagination  justify-content-center">
-			{% for item in range(1,totalPage) %}
-				<li class="page-item">
-					{% if (pageCurrent > 0) and (item == pageCurrent)   %}
-						<a class="page-link bg-primary text-white" href="{{ path('app_home',{page:item}) }}">{{ item}}</a>
-					{% else %}
-						<a class="page-link" tabindex="-1" aria-disabled="true" href="{{ path('app_home',{page:item}) }}">{{ item}}</a>
-					{% endif %}
-				</li>
-			{% endfor %}
-		</ul>
-	</nav>
+	{% if categoryNumber == null %}
+
+
+		{% if totalPage > 1 %}
+			<nav aria-label="Page navigation example">
+				<ul class="pagination  justify-content-center">
+					{% for item in range(1,totalPage) %}
+						<li class="page-item">
+							{% if (pageCurrent > 0) and (item == pageCurrent)   %}
+								<a class="page-link bg-primary text-white" href="{{ path('app_home',{page:item}) }}">{{ item}}</a>
+							{% else %}
+								<a class="page-link" tabindex="-1" aria-disabled="true" href="{{ path('app_home',{page:item}) }}">{{ item}}</a>
+							{% endif %}
+						</li>
+					{% endfor %}
+				</ul>
+			</nav>
+		{% endif %}
+	{% endif %}
 {% endblock %}
