--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -3,11 +3,15 @@
 	{{ post.title }}
 {% endblock %}
 {% block body %}
+
 	<main class="my-4">
-		<h1 class="text-left my-2">{{ post.title}}</h1>
-			<img class="img-fluid my-3" src="{{ ( post.imageName != null) ? vich_uploader_asset(post) | imagine_filter('medium_thumb') : asset('/images/default/pexels-eberhard-grossgasteiger-844297.jpg') | imagine_filter('medium_thumb') }}" alt="{{ post.title }}"/>
-		<p class="mt-2 ">{{ post.description|raw }}</p>
-		<p>{{post.content|raw }}
-		</p>
+		<div class="row">
+			<div class="col-8 m-auto">
+				<h1 class="text-left my-2">{{ post.title}}</h1>
+				<p class="mt-2 ">{{ post.description|raw }}</p>
+				<p>{{post.content|raw }}
+				</p>
+			</div>
+		</div>
 	</main>
 {% endblock %}
