--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																								           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																						           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -17,6 +17,11 @@
 		{% endblock %}
 	</head>
 	<body>
+		{% for type , value in app.flashes() %}
+			{% for message in value %}
+				<div class="alert alert-{{ type }} text-center" role="alert">{{ message }}</div>
+			{% endfor %}
+		{% endfor %}
 		<header class="d-flex justify-content-between bg-light">
 			<h1>
 				<a class="nav-link active text-warning" href="{{ path('app_home')}}">The Magic</a>
@@ -27,7 +32,7 @@
 						<ul class="navbar-nav">
 							{% if app.user %}
 								<li class="nav-item">
-									<a class="nav-link " href="#">Account</a>
+									<a class="nav-link " href="{{ path('app_account') }}">Account</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link " href="{{ path('app_logout') }}" onclick="event.preventDefault();document.getElementById('js_logout_form').submit();">Logout</a>
@@ -48,13 +53,7 @@
 				</div>
 			</nav>
 		</header>
-		<div class="container">
-			{% for type , value in app.flashes() %}
-				{% for message in value %}
-					<div class="alert alert-{{ type }}" role="alert">{{ message }}</div>
-				{% endfor %}
-			{% endfor %}
-			{% block body %}{% endblock %}
-		</div>
-	</body>
-</html>
+		<div class="container"> {% block body %}{% endblock %}
+			</div>
+		</body>
+	</html>
