--- a/templates/account/change_password.html.twig
+++ b/templates/account/change_password.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-	Reset your password
+{% block title %}Change Password
 {% endblock %}
 
 {% block body %}
@@ -9,6 +8,9 @@
 		<h1 class="text-center">Change your password</h1>
 		<p>
 			{{ form_start(resetForm) }}
+		</p>
+		<p>
+			{{ form_row(resetForm.currentPassword) }}
 		</p>
 		<p>
 			{{ form_row(resetForm.plainPassword) }}
