--- a/templates/account/edit.html.twig
+++ b/templates/account/edit.html.twig
@@ -7,7 +7,7 @@
 
 
 	<div class="row">
-		<h1 class="text-center mt-4">Edit Account</h1>
+		<h1 class="text-center m-5">Edit Account</h1>
 		<div class="col-6 m-auto">
 			{{ include('account/_form.html.twig', {'button_label': 'Update'}) }}
 		</div>
