--- a/templates/account/_form.html.twig
+++ b/templates/account/_form.html.twig
@@ -1,6 +1,8 @@
 {{ form_start(form) }}
-<p>{{form_row(form.fisrtName)}}</p>
-<p>{{form_row(form.lastName)}}</p>
+<div class="row">
+	<div class="col">{{form_row(form.fisrtName)}}</div>
+	<div class="col">{{form_row(form.lastName)}}</div>
+</div>
 <p>{{form_row(form.email)}}</p>
-<button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+<button class="btn btn-primary btn-lg form-control">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
