Ajout des liens entre le post, la categorie et utilisateur

--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -12,45 +12,62 @@
 	</nav>
 	<main class="d-flex justify-content-between my-5">
 		{% for userss in users|batch(3) %}
-			{% for user in userss %}
-				<div class="card" style="width: 18rem;">
-					<div class="card-body">
-						<h5 class="card-title text-center text-primary ">{{ user.fullName}}</h5>
-						<p class="card-text">
-							<span class="fw-bold">
-								Eamil :
-							</span>
-							{{ user.email }}</p>
-						<p class="card-text">
-							<span class="fw-bold">
-								Roles :
-							</span>
-							{{ user.roles ? user.roles|json_encode : '' }}</p>
-						<p class="card-text">
-							<span class="fw-bold">
-								Verified account :
-							</span>
-							{{ user.isVerified ? 'Yes' : 'No' }}</p>
-						<p class="card-text">
-							<span class="fw-bold">
-								Created at :
-							</span>
-							{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</p>
-						<p class="card-text">
-							<span class="fw-bold">
-								Updated at :
-							</span>
-							{{ user.updatedAt ? user.updatedAt|date('Y-m-d H:i:s') : '' }}</p>
-						<div class="action d-flex justify-content-between">
-							<a class="card-link btn btn-primary" href="{{ path('app_admin_user_edit', {'id': user.id}) }}">Edit</a>
-							{{ include('admin/user/_delete_form.html.twig') }}
+			<div class="row">
+				{% for user in userss %}
+					<div class="col">
+						<div class="card m-5" style="width: 18rem;">
+							<div class="card-body">
+								<h5 class="card-title text-center text-primary ">{{ user.fullName}}</h5>
+								<p class="card-text">
+									<span class="fw-bold">
+										Eamil :
+									</span>
+									{{ user.email }}</p>
+								<p class="card-text">
+									<span class="fw-bold">
+										Roles :
+									</span>
+									{{ user.roles ? user.roles|json_encode : '' }}</p>
+								<p class="card-text">
+									<span class="fw-bold">
+										Verified account :
+									</span>
+									{{ user.isVerified ? 'Yes' : 'No' }}</p>
+								<p class="card-text">
+									<span class="fw-bold">
+										Created at :
+									</span>
+									{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</p>
+								<p class="card-text">
+									<span class="fw-bold">
+										Updated at :
+									</span>
+									{{ user.updatedAt ? user.updatedAt|date('Y-m-d H:i:s') : '' }}</p>
+								<div class="action d-flex justify-content-between">
+									<a class="card-link btn btn-primary" href="{{ path('app_admin_user_edit', {'id': user.id}) }}">Edit</a>
+									{{ include('admin/user/_delete_form.html.twig') }}
+								</div>
+
+							</div>
 						</div>
-
 					</div>
-				</div>
-			{% endfor %}
-
+				{% endfor %}
+			</div>
 		{% endfor %}
 	</main>
-
+	{% if totalPage > 1 %}
+		<nav aria-label="Page navigation example">
+			<ul class="pagination  justify-content-center">
+				{% for item in range(1,totalPage) %}
+					<li class="page-item">
+						{% if (pageCurrent > 0) and (item == pageCurrent)   %}
+							<a class="page-link bg-primary text-white" href="{{ path('app_admin_user_index',{page:item}) }}">{{ item}}</a>
+						{% else %}
+							<a class="page-link" tabindex="-1" aria-disabled="true" href="{{ path('app_admin_user_index',{page:item}) }}">{{ item}}</a>
+						{% endif %}
+					</li>
+				{% endfor %}
+			</ul>
+		</nav>
+	{% endif %}
 {% endblock %}
