--- a/templates/admin/adminBase.html.twig
+++ b/templates/admin/adminBase.html.twig
@@ -24,15 +24,18 @@
 			<nav class="navbar navbar-expand-lg navbar-light bg-dark">
 				<div class="container-fluid">
 					<div class="collapse navbar-collapse" id="navbarNav">
-						<ul class="navbar-nav ">
+						<ul class="navbar-nav text-light">
 							<li class="nav-item">
 								<a class="nav-link  text-light" href="{{ path('app_home') }}">The Magic</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link  text-light" href="#">Account</a>
+								<a class="nav-link  text-light" href="{{ path('app_account') }}">Account</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link text-light " href="{{ path('app_logout') }}">Logout</a>
+								<a class="nav-link text-light " href="{{ path('app_logout') }}" onclick="event.preventDefault();document.getElementById('js_logout_form').submit();">Logout</a>
+								<form id="js_logout_form" action="{{ path('app_logout') }}" method="POST" style="display: none;">
+									<input type="hidden" name="_csrf_token" value="{{ csrf_token('logout') }}">
+								</form>
 							</li>
 						</ul>
 					</div>
