--- a/templates/admin/post/index.html.twig
+++ b/templates/admin/post/index.html.twig
@@ -42,4 +42,19 @@
 			{% endfor %}
 		</tbody>
 	</table>
+	{% if totalPage > 1 %}
+		<nav aria-label="Page navigation example">
+			<ul class="pagination  justify-content-center">
+				{% for item in range(1,totalPage) %}
+					<li class="page-item">
+						{% if (pageCurrent > 0) and (item == pageCurrent)   %}
+							<a class="page-link bg-primary text-white" href="{{ path('app_admin_post_index',{page:item}) }}">{{ item}}</a>
+						{% else %}
+							<a class="page-link" tabindex="-1" aria-disabled="true" href="{{ path('app_admin_post_index',{page:item}) }}">{{ item}}</a>
+						{% endif %}
+					</li>
+				{% endfor %}
+			</ul>
+		</nav>
+	{% endif %}
 {% endblock %}
